# course_work_3

./: .coverage  README.md  pyproject.toml
src/: print_5_executed_operations.py
tests/: .coverage  test_print_5_executed_operations.py
utils/: print_5_executed_operations.py
