[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = "Выводит на экран список из 5 последних выполненных клиентом операций"
authors = ["Svetlana Shambina <szxd2009@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
